--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li>Contact me</li>
         </ul>
     </nav>
-<img id="Arthem" src="/assets/Screenshot 2024-06-02 at 16.20.32.png" />
+<img id="Arthem" src="./assets/Screenshot 2024-06-02 at 16.20.32.png" />
     <h1 id="I-am"> I am Arthem Gryva </h1>
     <p>Software developer from Lviv</p>
 
